--- a/python-worker/Dockerfile
+++ b/python-worker/Dockerfile
@@ -10,6 +10,11 @@ COPY requirements.txt ./
 # Install any needed dependencies specified in requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Expose ports for services on the container 
+EXPOSE 6730 
+EXPOSE 5682
+EXPOSE 3000 
+
 # Copy the rest of the application code into the container
 COPY . .
 
