--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,6 @@ services:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.12.1
     environment:
       - discovery.type=single-node
-      # Example environment variables for hypothetical advanced configurations
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
       - "xpack.security.enabled=false"
     volumes:
@@ -15,6 +14,9 @@ services:
 
   kibana:
     image: docker.elastic.co/kibana/kibana:8.12.1
+    environment:
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - "xpack.security.enabled=false"
     depends_on:
       - elasticsearch
     ports:
@@ -22,6 +24,9 @@ services:
 
   logstash:
     image: docker.elastic.co/logstash/logstash:8.12.1
+    environment:
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - "xpack.security.enabled=false"
     command: logstash -f /usr/share/logstash/pipeline/logstash.conf
     volumes:
       - ./logstash:/usr/share/logstash/pipeline
