--- a/python-worker/Dockerfile
+++ b/python-worker/Dockerfile
@@ -1,5 +1,5 @@
 # Use the official Python image as the base image
-FROM python:3.9-slim
+FROM python:3.9
 
 # Set the working directory in the container
 WORKDIR /usr/src/app
@@ -11,10 +11,10 @@ COPY requirements.txt ./
 RUN pip3 install --no-cache-dir -r requirements.txt
 
 # Expose ports for services on the container 
-EXPOSE 6730 
+EXPOSE 6732
 EXPOSE 5682
-EXPOSE 3000 
-EXPOSE 80 
+EXPOSE 3000
+EXPOSE 80
 
 # Copy the rest of the application code into the container
 COPY . .
